2008-03-14  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst-libs/gst/dshow/Makefile.am:
	Make sure the dshow helper library headers get distributed in the next
	release.

2008-03-14  David Schleef  <ds@schleef.org>

	Patch by: William M. Brack

	* gst/bayer/gstbayer2rgb.c: Significant improvements.  Fixes #521392.

2008-03-14  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/selector/gstinputselector.c: (gst_selector_pad_event),
	(gst_selector_pad_bufferalloc), (gst_selector_pad_chain),
	(gst_input_selector_class_init),
	(gst_input_selector_set_active_pad),
	(gst_input_selector_set_property),
	(gst_input_selector_push_pending_stop):
	Add lots of debugging. 
	Fix time member in the newsegment event.

2008-03-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/selector/gstinputselector.c: (gst_selector_pad_class_init),
	(gst_selector_pad_finalize), (gst_selector_pad_get_property),
	(gst_selector_pad_event), (gst_input_selector_class_init),
	(gst_input_selector_init), (gst_input_selector_set_active_pad),
	(gst_input_selector_set_property),
	(gst_input_selector_get_property),
	(gst_input_selector_request_new_pad),
	(gst_input_selector_release_pad),
	(gst_input_selector_push_pending_stop),
	(gst_input_selector_switch):
	* gst/selector/gstinputselector.h:
	Various cleanups.
	Added tags to the pads.
	Select active pad based on the pad object instead of its name.
	Fix refcount in set_active_pad.
	Add property to get the number of pads.

	* gst/selector/gstoutputselector.c:
	(gst_output_selector_class_init),
	(gst_output_selector_set_property),
	(gst_output_selector_get_property):
	Various cleanups.
	Select the active pad based on the pad object instead of its name.
	Fix locking when setting the active pad.

	* gst/selector/gstselector-marshal.list:
	* tests/check/elements/selector.c: (cleanup_pad),
	(selector_set_active_pad), (run_input_selector_buffer_count):
	Fixes for pad instead of padname for pad selection.
