@@ -1,3 +1,11 @@
+2008-03-17  Sebastian Dröge  <slomo@circular-chaos.org>
+
+	* ext/neon/gstneonhttpsrc.c: (gst_neonhttp_src_class_init),
+	(gst_neonhttp_src_send_request_and_redirect):
+	Handle HTTP status code 303 (See Other) the same way
+	as 302 (Found). Not sure what to do about all the other 3xx
+	redirect status codes. Fixes bug #522884.
+
 2008-03-14  Edward Hervey  <edward.hervey@collabora.co.uk>
 
 	* gst-libs/gst/dshow/Makefile.am:
